# socker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml  makefile
app/: Cargo.toml  config.json  makefile
app/src/: clone.rs  config_parser.rs  container.rs  lib.rs  main.rs  mount.rs  parse.rs  process.rs  ps.rs  root.rs
src/: config_parser.rs  container.rs  hostname.rs  lib.rs  main.rs  mounts.rs  process.rs  root.rs
test-container/: Dockerfile  config.json
