[package]
name = "socker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.104"}
libc = "0.2.158"
nix = { version = "0.26.1", features=["process"]}
anyhow = "1.0.75"
